[add]テキスト修正

--- a/Ganspa/templates/Ganspa/top.html
+++ b/Ganspa/templates/Ganspa/top.html
@@ -11,7 +11,6 @@
     <h1>Ganspa</h1>
     <p>hiromu morisaki</p> 
     <a href="https://us05web.zoom.us/j/81931427678?pwd=TjRSb2hHNko0Nk1ycExnZlpwWnd2Zz09">Ganspaへ参加します</a>
-    <a href="https://us05web.zoom.us/j/81931427678?pwd=TjRSb2hHNko0Nk1ycExnZlpwWnd2Zz09">Ganspaへ参加します</a>
-    <a href="https://us05web.zoom.us/j/81931427678?pwd=TjRSb2hHNko0Nk1ycExnZlpwWnd2Zz09">Ganspaへ参加します</a>
+   <p>zoomURL</p> 
 </body>
 </html>
