--- a/Ganspa/static/Ganspa/css/top.css
+++ b/Ganspa/static/Ganspa/css/top.css
@@ -1,7 +1,12 @@
 h1{
     margin:20px;
-    color:green;
+    color:red;
 }
 .cafe{
     height: 500px;
+}
+p{
+    width:80px;
+    height:120px;
+    color:orange;
 }
