--- a/Ganspa/templates/Ganspa/top.html
+++ b/Ganspa/templates/Ganspa/top.html
@@ -11,6 +11,12 @@
     <h1>Ganspa</h1>
     <p>hiromu morisaki</p> 
     <a href="https://us05web.zoom.us/j/81931427678?pwd=TjRSb2hHNko0Nk1ycExnZlpwWnd2Zz09">Ganspaへ参加します</a>
-   <p>zoomURL</p> 
+    <h2>Ganspaは学習したい人を応援する、家でスタバの環境構築ができるWebサービスです</h2>>
+    <p>スタバには、毎日多くの何かを学習したい人が訪れる。<br>
+        家では集中力が続かない、或いは難しいと感じている。<br>
+        Ganspaとは、スタバと同様、或いはそれ以上の学習環境を提供する<br>
+        「to C向け学習環境構築プラットフォーム」となります。
+    </p>
+
 </body>
 </html>
