--- a/Ganspa/templates/Ganspa/top.html
+++ b/Ganspa/templates/Ganspa/top.html
@@ -7,16 +7,59 @@
     <link rel="stylesheet" type="text/css" href="{% static 'Ganspa/css/top.css' %}"/>
 </head>
 <body>
-    <img src="{% static 'Ganspa/img/cafe.png' %}" class="cafe"/>
-    <h1>Ganspa</h1>
-    <p>hiromu morisaki</p> 
-    <a href="https://us05web.zoom.us/j/81931427678?pwd=TjRSb2hHNko0Nk1ycExnZlpwWnd2Zz09">Ganspaへ参加します</a>
-    <h2>Ganspaは学習したい人を応援する、家でスタバの環境構築ができるWebサービスです</h2>>
-    <p>スタバには、毎日多くの何かを学習したい人が訪れる。
-        家では集中力が続かない、或いは難しいと感じている。<br>
-        Ganspaとは、スタバと同様、或いはそれ以上の学習環境を提供する
-        「to C向け学習環境構築プラットフォーム」となります。
-    </p>
+    
+
+    <div class="header">
+        <div class="header-logo">Ganspa</div>
+        <div class="header-list">
+            <ul>
+            <li>Ganspa</li>
+            <li>プロフィール</li>
+            </ul>
+        </div>
+
+    </div>
+
+    <div class="main">
+        <div class="copy-container">
+            <h1>Ganspaは学習したい人を応援する<br>
+                家でスタバの環境構築ができるWebサービスです</h1>
+            <img src="{% static 'Ganspa/img/cafe.png' %}" class="cafe"/><br>
+            <a href="https://us05web.zoom.us/j/81931427678?pwd=TjRSb2hHNko0Nk1ycExnZlpwWnd2Zz09">Ganspaへ参加</a>
+            <p>スタバには、毎日多くの何かを学習したい人が訪れる。
+                家では集中力が続かない、或いは難しいと感じている。<br>
+                Ganspaとは、スタバと同様、或いはそれ以上の学習環境を提供する
+                「to C向け学習環境構築プラットフォーム」となります。
+            </p>
+
+        </div>
+        <div class="contents">
+            
+           
+        </div>
+
+        <div class="contact-form">
+
+        </div>
+
+
+        
+        
+        
+        
+    </div>
+
+    <div class="footer">
+    <div class="footer-logo">Ganspa</div>
+    <div class="footer-list">
+        <ul>
+        <li>プロフィール</li>
+        <li>ランキング</li>
+        <li>お知らせ（開催案内)</li>
+        <li>ログアウト</li>
+        </ul>
+    </div>
+    </div>
 
 </body>
 </html>
