--- a/Ganspa/templates/Ganspa/top.html
+++ b/Ganspa/templates/Ganspa/top.html
@@ -34,6 +34,9 @@
 
         </div>
         <div class="contents">
+        <div class="contents-item">
+            <img src="">
+        </div>
             
            
         </div>
