--- a/Ganspa/static/Ganspa/css/base.css
+++ b/Ganspa/static/Ganspa/css/base.css
@@ -1,3 +1,21 @@
 .header{
-    margin:100px;
+    background-color:#0e0500;
+    color:#fff;
+    height:120px;
+}
+.logo01{
+    display: block;
+    width: auto;
+    height: 120px;
+}
+
+.header-list{
+    float:right;
+    padding:33px 20px;
+}
+.header-list a{
+    width:auto;
+    float:right;
+    padding:10px 20px;
+    font-size:25px;
 }
