--- a/Ganspa/templates/Ganspa/top.html
+++ b/Ganspa/templates/Ganspa/top.html
@@ -3,41 +3,35 @@
 <!doctype html>
 <html lang="ja">
 <head>
+    {% block css %}
+
     <meta charset="utf-8">
     <title>Ganspa</title>
     <link rel="stylesheet" type="text/css" href="{% static 'Ganspa/css/top.css' %}"/>
+    {% endblock %}
 </head>
 <body>
     {% block content %}
 
-
-    <div class="header">
-        <div class="header-logo">Ganspa</div>
-        <div class="header-list">
-            <ul>
-            <li>Ganspa</li>
-            <li>プロフィール</li>
-            </ul>
-        </div>
-
-    </div>
-
     <div class="main">
+        <div class="top-wrapper">
         <div class="copy-container">
             <h1>Ganspaは学習したい人を応援する<br>
                 家でスタバの環境構築ができるWebサービスです</h1>
             <img src="{% static 'Ganspa/img/cafe.png' %}" class="cafe"/><br>
             <a href="https://us05web.zoom.us/j/81931427678?pwd=TjRSb2hHNko0Nk1ycExnZlpwWnd2Zz09">Ganspaへ参加</a>
-            <p>スタバには、毎日多くの何かを学習したい人が訪れる。
-                家では集中力が続かない、或いは難しいと感じている。<br>
-                Ganspaとは、スタバと同様、或いはそれ以上の学習環境を提供する
-                「to C向け学習環境構築プラットフォーム」となります。
-            </p>
-
+        
         </div>
-        <div class="contents">
-        <div class="contents-item">
-            <img src="">
+        </div>
+        <div class="message">
+            <h3>お知らせ</h3>
+            <p>①いいね</p>
+            <p>②開催日程</p>  
+        <div class="profile">
+            <h3>プロフィール</h3>
+            <p>①名前</p>
+            <p>②レベル</p>
+            <p>③目標</p>
         </div>
             
            
@@ -45,26 +39,20 @@
 
         <div class="contact-form">
 
-        </div>
-
-
-        
-        
-        
-        
+        </div>        
     </div>
-
+    
     <div class="footer">
-    <div class="footer-logo">Ganspa</div>
-    <div class="footer-list">
-        <ul>
-        <li>プロフィール</li>
-        <li>ランキング</li>
-        <li>お知らせ（開催案内)</li>
-        <li>ログアウト</li>
-        </ul>
-    </div>
-    </div>
+        <div class="footer-logo">
+         <img src="{% static 'Ganspa/img/logo.png' %}" class="logo01" alt="Ganspa">
+        </div>
+        <div class="footer-list">
+            <a href="{% url 'guide' %}">guideページへ</a><br>
+            <a href="{% url 'users' %}">usersページへ</a><br>
+            <a href="{% url 'user' %}">userページへ</a>
+        </div>
+    </div> 
+   
     {% endblock %}
 </body>
 </html>
