--- a/Ganspa/templates/Ganspa/user.html
+++ b/Ganspa/templates/Ganspa/user.html
@@ -2,11 +2,19 @@
 <!doctype html>
 <html lang="ja">
 <head>
+    {% block css %}
     <meta charset="utf-8">
     <title>Ganspa</title>
     <link rel="stylesheet" type="text/css" href="{% static 'Ganspa/css/user.css' %}"/>
+    {% endblock %}
 </head>
 <body>
-    <p>ユーザー個人の情報を編集できるページ</p>
+    {% block content %}
+    <h2 class="profile">ユーザー個人の情報を編集できるページ</h2>
+    <p>写真</p>
+    <p>名前</p>
+    <p>総利用回数</p>
+    <p>目標</p><br>
+    {% endblock %}
 </body>
 </html>
