--- a/Ganspa/templates/Ganspa/top.html
+++ b/Ganspa/templates/Ganspa/top.html
@@ -47,12 +47,16 @@
     
     <div class="footer">
         <div class="footer-logo">
-         <img src="{% static 'Ganspa/img/logo.png' %}" class="logo01" alt="Ganspa">
+         <img src="{% static 'Ganspa/img/logo2.png' %}" class="logo2" alt="Ganspa">
         </div>
         <div class="footer-list">
-            <a href="{% url 'guide' %}">guideページへ</a><br>
-            <a href="{% url 'users' %}">usersページへ</a><br>
-            <a href="{% url 'user' %}">userページへ</a>
+            <ul>
+            <li>営業時間<li>
+            <li>07:00~09:00</li>
+            <li>17:00~22:00</li>
+
+
+            </ul>
         </div>
     </div> 
    
