--- a/Ganspa/templates/Ganspa/base.html
+++ b/Ganspa/templates/Ganspa/base.html
@@ -25,7 +25,7 @@
             {% endif %}
         </div>
         <div class="header-logo">
-          <img src="{% static 'Ganspa/img/logo.png' %}" class="logo01" alt="Ganspa">
+          <img src="{% static 'Ganspa/img/logo2.png' %}" class="logo2" alt="Ganspa">
         </div>
     </header>
 {% block content %}{% endblock %}
